--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -137,13 +137,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === `TableOperations.opPasteColsAfter` & `TableOperations.opPasteRowsAfter` now place the cursor in the newly pasted row/column to be consistent with the other pasting operations.
 // #TINY-6460
 
-Previously, the cursor position in `opPasteRowsAfter` and `opPasteColsAfter` was calculated incorrectly after pasting a new rol or column.
+Previously, the cursor position in `opPasteRowsAfter` and `opPasteColsAfter` was calculated incorrectly after pasting a new row or column.
 
-As a result, after pasting, the cursor remained in the same position instead of moving to the newly pasted row or column.
+As a consequence, after pasting, the cursor remained in the same position instead of moving to the newly pasted row or column.
 
-{productname} 7.0 addresses this, fixing the cursor calculation in `opPasteRowsAfter` and `opPasteColsAfter` to use the 'index' variable.
+{productname} 7.0 addresses this, fixing the cursor calculation in `opPasteRowsAfter` and `opPasteColsAfter` to use the `index` variable.
 
-Now, when using "Paste row/column after," the cursor is correctly positioned in the newly pasted row or column.
+Now, when using `opPasteRowsAfter` and `opPasteColsAfter`, the cursor is correctly positioned in the newly pasted row or column as expected.
 
 [[security-fixes]]
 == Security fixes
