Apply suggestions from code review
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/pages/7.0-release-notes.adoc
+++ b/modules/ROOT/pages/7.0-release-notes.adoc
@@ -42,7 +42,7 @@ For information on the **<Premium plugin name>** plugin, see xref:<plugincode>.a
 [[premium-plugin-revision-history]]
 === Revision History
 
-The new Premium plugin, **Revision History**, allows you to track changes made to content in the TinyMCE editor and restore previous versions of the content.
+The new Premium plugin, **Revision History**, allows you to track changes made to content in the {productname} editor and restore previous versions of the content.
 
 For information on the **Revision History** plugin, see xref:revisionhistory.adoc[Revision History].
 
